# fdf

./: .gitignore  BuildAndRunTests.bat  CMakeLists.txt  Generate.bat  GenerateModule.bat  README.md
designs/: Design_0.txt  Design_1.txt  Design_2.txt  Design_3.txt  Design_4.txt  Design_5.txt  README.md
include/: fdf.h
src/: fdf.cpp  fdf.ixx
tests/: CMakeLists.txt  ProjectSpec.txt  README.md  Test_0.txt  test.cpp
